--- a/src/Components/Filters/filters.module.css
+++ b/src/Components/Filters/filters.module.css
@@ -14,12 +14,12 @@
 
 .storycontainer {
   width: 20%;
-  height: 300px;
+  height: 350px;
   z-index: 0;
   position: relative;
   top: -10%;
   border-radius: 12px;
-  margin: 2%;
+  margin: 1.6%;
   transition: all 1s ease-in-out;
 }
 
@@ -42,10 +42,10 @@
   display: block;
   position: relative;
   position: relative;
-  top: 67%;
+  top: 70%;
   width: 100%;
   height: 30%;
-  background: linear-gradient(grey, black);
+  background: rgba(0, 0, 0, 1);
   color: whitesmoke;
   z-index: 3;
   border-bottom-left-radius: 12px;
@@ -59,25 +59,26 @@
   width: 80%;
   position: relative;
   left: 10px;
-  font-size: large;
+  font-size: medium;
   z-index: 1;
 }
 
 .decsription {
-  width: 80%;
+  width: 90%;
+  top: -15px;
   position: relative;
   left: 10px;
   z-index: 1;
   word-wrap: break-word;
+  font-size: 10px;
 }
 
 .seeMoreBtn {
   position: relative;
   margin: 0 auto;
-  top: 5px;
-  left: 45%;
+  top: 10px;
+  left: 42.5%;
   width: 10%;
-  top: 2px;
   height: 40px;
   border-radius: 10px;
   background-color: #ff7373;
@@ -108,12 +109,14 @@
   width: 30%;
   height: 25px;
   position: relative;
-  top: 67%;
+  top: 65%;
   margin: 0 auto;
   z-index: 4;
   border-radius: 10px;
   border: none;
-  border: 1px solid red;
+  border: 1px solid white;
+  background: #ffffff;
+  cursor: pointer;
 }
 
 @media only screen and (max-width: 600px) {
@@ -130,6 +133,16 @@
     margin: 0 auto;
     margin-bottom: 10%;
     /* border: 1px solid red; */
+  }
+
+  .storycontainer {
+    height: 450px;
+    z-index: 0;
+    position: relative;
+    top: -10%;
+    border-radius: 12px;
+    margin: 2%;
+    /* transition: all 1s ease-in-out; */
   }
 
   .heading {
@@ -160,8 +173,8 @@
 
   .editBtn {
     display: block;
-    width: 30%;
-    height: 25px;
+    width: 25%;
+    height: 30px;
     position: relative;
     top: 60%;
     margin: 0 auto;
