--- a/src/Components/TopTrending/trending.module.css
+++ b/src/Components/TopTrending/trending.module.css
@@ -8,7 +8,7 @@
   max-height: fit-content;
   position: relative;
   top: 30px;
-  /* left: 1%; */
+  left: 0.5%;
   margin: 0 auto;
   margin-bottom: 10%;
 }
@@ -22,6 +22,7 @@
   border-radius: 12px;
   margin: 2%;
   transition: all 1s ease-in-out;
+  cursor: pointer;
 }
 
 .storycontainer:hover {
@@ -48,7 +49,7 @@
   position: relative;
   top: 70%;
   width: 100%;
-  height: 17vh;
+  height: 15vh;
   /* background: linear-gradient(grey, black); */
   background: rgba(0, 0, 0, 1);
   color: whitesmoke;
@@ -71,17 +72,19 @@
 }
 
 .decsription {
-  width: 95%;
+  width: 90%;
   position: relative;
-  top: -30px;
-  left: 10px;
+  top: -20px;
+  /* left: 10px; */
+  padding: 0 10px;
   z-index: 1;
   word-wrap: break-word;
-  font-size: small;
+  font-size: 10px;
 }
 
 .seeMoreBtn {
   position: relative;
+  left: -2%;
   margin: 0 auto;
   top: 5px;
   width: 10%;
@@ -150,15 +153,16 @@
     width: 80%;
     position: relative;
     top: -10px;
-    font-size: x-large;
+    font-size: large;
     z-index: 1;
+    padding-left: 10px;
   }
 
   .decsription {
     width: 80%;
     position: relative;
     top: -30px;
-    font-size: 1rem;
+    font-size: smaller;
     left: 10px;
     z-index: 1;
     word-wrap: break-word;
@@ -209,9 +213,8 @@
   .seeMoreBtn {
     position: relative;
     top: 330%;
-    width: 20%;
-    height: 50px;
+    width: 40%;
+    height: 60px;
     z-index: 1;
-    padding: 10px;
   }
 }
