--- a/src/Components/bookmarkpage.module.css
+++ b/src/Components/bookmarkpage.module.css
@@ -7,7 +7,7 @@
   height: 60px;
   background: #ffffff;
   box-shadow: 0px 4px 15px 0px #00000026;
-  border: 1px solid red;
+  /* border: 1px solid red; */
 }
 
 .bookmarkSwip {
@@ -82,7 +82,7 @@
 
 .bookmarkProfilePic {
   position: absolute;
-  left: 93%;
+  left: 92%;
   top: 10px;
 }
 
@@ -91,7 +91,7 @@
   background-color: #ffffff;
   width: 27px;
   height: 20px;
-  left: 96%;
+  left: 95%;
   top: 20px;
   border-radius: 15px;
   cursor: pointer;
@@ -157,15 +157,14 @@
   margin: 0 auto;
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 650px) {
   .bookmarkHeader {
-    position: absolute;
-    top: -0;
+    /* position: absolute; */
+    margin: 5px 2px;
     width: 100%;
-    height: 120px;
+    height: 60px;
     background: #ffffff;
     box-shadow: 0px 4px 15px 0px #00000026;
-    border: 1px solid red;
   }
   .bookmarkBtn {
     position: absolute;
@@ -211,7 +210,7 @@
     width: 10%;
     height: 10%;
     left: 80%;
-    top: 61%;
+    top: 40%;
     font-size: large;
     cursor: pointer;
     border: none;
@@ -229,7 +228,7 @@
     margin: 0 auto;
     text-align: center;
     position: relative;
-    margin-top: 40%;
+    margin-top: 10%;
     font-weight: 800;
   }
 
@@ -261,5 +260,9 @@
     background-size: cover;
     background-position: center;
     height: 100%;
+  }
+
+  .navbar {
+    margin-top: 5px;
   }
 }
