--- a/src/Components/home.css
+++ b/src/Components/home.css
@@ -158,7 +158,7 @@ body {
 @media only screen and (max-width: 600px) {
   .header {
     min-width: 100%;
-    height: 100px;
+    height: 50px;
     background: #ffffff;
     box-shadow: 0px 4px 15px 0px #00000026;
     /* padding: 10px; */
@@ -172,11 +172,11 @@ body {
   }
 
   .filter-container {
-    display: grid;
-    grid-template-columns: repeat(3, 100px);
+    display: flex;
     width: 90%;
     height: 30vh;
-    /* border: 1px solid red; */
+    overflow-x: auto;
+    white-space: nowrap;
     position: relative;
     margin: 0 auto;
     top: 10px;
@@ -186,8 +186,8 @@ body {
 
   .fillter-button-container {
     border-radius: 20px;
-    width: 100%;
-    height: 100px;
+    /* width: 100%; */
+    /* height: 100px; */
     border: none;
     cursor: pointer;
     background-color: none;
@@ -226,6 +226,13 @@ body {
     text-align: center;
     cursor: pointer;
   }
+  .register-btn {
+    display: none;
+  }
+
+  .signin-btn {
+    display: none;
+  }
 
   .signin-btn {
     position: absolute;
@@ -234,7 +241,7 @@ body {
     top: 55%;
     left: 70%;
     border-radius: 20px;
-    background-color: #ff7373;
+    background: #73abff;
     color: #ffffff;
     border: none;
     font-family: DM Sans;
@@ -246,4 +253,10 @@ body {
   }
 
   /*  */
+
+  /* 
+@media only screen and (min-width: 650px) {
+  .hamBtn {
+    display: none;
+  } */
 }
