--- a/src/Components/individualstories/individualStory.module.css
+++ b/src/Components/individualstories/individualStory.module.css
@@ -13,8 +13,8 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 20%;
-  height: 65%;
+  width: 25%;
+  height: 70%;
   border-radius: 12px;
   background-color: #ffffff;
   z-index: 3;
@@ -100,7 +100,7 @@
 .detailsContainer {
   background-color: rgb(22, 21, 21);
   position: relative;
-  top: 50%;
+  top: 52%;
   margin: 0 auto;
   width: 100%;
   height: 30%;
@@ -173,14 +173,14 @@
 }
 
 .liked {
-  color: red; /* Change the color to red when liked */
+  color: red;
 }
 
 /* Left and right slide */
 
 .leftSlide {
   position: relative;
-  top: 200px;
+  top: 150px;
   left: -50%;
   font-size: 3rem;
   color: white;
@@ -191,7 +191,7 @@
 
 .rightSlide {
   position: relative;
-  top: 190px;
+  top: 140px;
   right: -130%;
   font-size: 3rem;
   color: white;
@@ -209,10 +209,10 @@
 @media only screen and (max-width: 600px) {
   .container {
     position: fixed;
-    top: 52%;
+    top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 80%;
+    width: 70%;
     height: 80%;
     border-radius: 12px;
     background-color: #ffffff;
@@ -222,22 +222,43 @@
   }
 
   .leftSlide {
-    position: relative;
+    /* position: relative;
     top: -125px;
     left: 15%;
     font-size: 3rem;
     color: white;
     background: none;
-    border: none;
+    border: none; */
+    display: none;
   }
 
   .rightSlide {
-    position: relative;
+    /* position: relative;
     top: -130px;
     right: -60%;
     font-size: 3rem;
     color: white;
     background: none;
-    border: none;
+    border: none; */
+    display: none;
+  }
+
+  .detailsContainer {
+    background-color: rgb(22, 21, 21);
+    position: relative;
+    top: 65%;
+    margin: 0 auto;
+    width: 100%;
+    height: 30%;
+    color: white;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: flex-start;
+    -webkit-box-shadow: 0px -4px 3px rgba(50, 50, 50, 0.75);
+    -moz-box-shadow: 0px -4px 3px rgba(50, 50, 50, 0.75);
+    box-shadow: 0px -4px 3px rgba(50, 50, 50, 0.75);
   }
 }
