--- a/src/Components/navbar/Navbar.module.css
+++ b/src/Components/navbar/Navbar.module.css
@@ -14,7 +14,7 @@
   font-weight: 700;
 }
 .navBtns {
-  width: 40%;
+  /* width: 40%; */
   display: inline-flex;
   align-items: center;
   justify-content: flex-end;
