--- a/src/Components/storiesmodal/addStoriesModal.module.css
+++ b/src/Components/storiesmodal/addStoriesModal.module.css
@@ -5,7 +5,7 @@
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.6);
-  z-index: 9;
+  z-index: 3;
 }
 
 .addStoriesContainer {
@@ -13,8 +13,8 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 60%;
-  height: 80vh;
+  width: 50%;
+  height: 60vh;
   border-radius: 12px;
   background-color: #ffffff;
   z-index: 3;
@@ -25,14 +25,14 @@
   color: grey;
   position: relative;
   left: 70%;
-  top: 2px;
+  top: 20px;
 }
 .closeBtn {
   position: relative;
   left: 93%;
   top: 10px;
-  width: 30px;
-  height: 30px;
+  width: 20px;
+  height: 20px;
   text-align: center;
   padding: initial;
   cursor: pointer;
@@ -40,20 +40,15 @@
   border: none;
   font-size: large;
   color: red;
-  border-radius: 50%;
-  padding: 5px;
-}
-
-.addStoriesStyle.closeBtn .faX {
-  vertical-align: middle;
+  border-radius: 10px;
 }
 
 .slideContainer {
   width: 90%;
-  height: 6vh;
+  height: 7vh;
   position: relative;
   left: 5%;
-  top: 20px;
+  top: 30px;
   display: flex;
   gap: 10px;
   justify-content: center;
@@ -62,7 +57,7 @@
 
 .slide {
   position: relative;
-  width: 15%;
+  width: 20%;
   height: 100%;
   background-color: white;
   border-radius: 15px;
@@ -83,8 +78,8 @@
 
 .slideCloseBtn {
   position: relative;
-  top: 0px;
-  left: 15%;
+  top: -10px;
+  left: 20%;
   width: 15px;
   padding: initial;
   height: 15px;
@@ -109,35 +104,31 @@
 }
 
 .formContainer {
-  display: flex;
-  flex-direction: column;
+  display: block;
   width: 80%;
-  height: 55%;
+  height: 60%;
   position: relative;
   top: 35px;
-  /* left: -10px; */
+  left: -10px;
   margin: 0 auto;
 }
 
 .filedContainer {
   display: flex;
-  flex-direction: row;
-  /* gap: 50px; */
+  gap: 50px;
   width: 100%;
   height: 20%;
   margin-top: 10px;
 }
 
 .input {
-  margin-top: 5px;
   border: 1px solid black;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  width: 100%;
 }
 .align {
-  /* position: relative;
+  position: relative;
   left: 5%;
-  width: 70%; */
+  width: 70%;
   font-weight: 600;
   color: black;
   font-size: 1rem;
@@ -146,7 +137,7 @@
 .alignHeading {
   position: relative;
   left: 8%;
-  width: 80%;
+  width: 70%;
   font-weight: 600;
   color: black;
   font-size: 1rem;
@@ -154,30 +145,29 @@
 
 .alignCategory {
   position: relative;
-  left: 7%;
-  width: 81%;
+  left: 4%;
+  width: 70%;
   font-weight: 600;
   color: black;
   font-size: 1rem;
 }
 
 .alignDescription {
-  width: 80%;
-  left: 3.4%;
+  width: 70%;
   font-weight: 600;
   color: black;
   font-size: 1rem;
   position: relative;
-  /* left: 1.5%; */
+  left: 1.5%;
 }
 
 .alignImage {
   position: relative;
-  left: 11.5%;
+  left: 7%;
+  width: 70%;
   font-weight: 600;
   color: black;
   font-size: 1rem;
-  width: 80%;
 }
 
 /* Button */
@@ -204,7 +194,6 @@
   position: relative;
   left: 20px;
   font-size: large;
-  cursor: pointer;
 }
 
 .nextBtn {
@@ -217,7 +206,6 @@
   position: relative;
   left: 20px;
   font-size: large;
-  cursor: pointer;
 }
 
 .postBtn {
@@ -230,10 +218,9 @@
   position: relative;
   margin-left: 40%;
   font-size: large;
-  cursor: pointer;
 }
 
-/* @media only screen and (max-width: 1250px) {
+@media only screen and (max-width: 1250px) {
   .alignHeading {
     position: relative;
     left: 9%;
@@ -246,7 +233,7 @@
   .alignCategory {
     position: relative;
     left: 4%;
-    width: 71%;
+    width: 70%;
     font-weight: 600;
     color: black;
     font-size: 1rem;
@@ -256,15 +243,9 @@
     width: 70%;
     font-weight: 600;
     color: black;
-    font-size: small;
-    position: relative;
-    left: 2px;
-    resize: none;
-  }
-
-  .alignDescription::placeholder {
-    padding-top: 10px;
     font-size: 1rem;
+    position: relative;
+    left: 1px;
   }
 
   .alignImage {
@@ -275,44 +256,31 @@
     color: black;
     font-size: 1rem;
   }
-} */
+}
 
 @media only screen and (max-width: 650px) {
   .addStoriesContainer {
-    width: 80%;
-    height: 80%;
+    width: 100%;
+    height: 100%;
     border-radius: 12px;
     background-color: #ffffff;
     z-index: 3;
   }
 
-  .addBtn {
-    height: 30%;
-    width: 50%;
-    margin: 0 auto;
-    cursor: pointer;
-  }
-
   .closeBtn {
     position: relative;
     left: 80%;
-    top: 15px;
-    width: 30px;
-    height: 30px;
+    top: 10px;
+    width: 20px;
+    height: 20px;
     text-align: center;
     padding: initial;
     cursor: pointer;
     border-radius: 2px;
-    border: 3px solid red;
+    border: none;
     font-size: large;
     color: red;
-    border-radius: 50%;
-    background: #ffffff;
-    padding: 5px;
-  }
-
-  .addStoriesStyle.closeBtn .faX {
-    vertical-align: middle;
+    border-radius: 10px;
   }
 
   .info {
@@ -323,10 +291,10 @@
   }
 
   .slideContainer {
-    width: 30%;
-    height: 40%;
+    width: 20%;
+    height: 80vh;
     position: relative;
-    left: -25px;
+    left: -20px;
     top: 30px;
     display: flex;
     gap: 10px;
@@ -334,49 +302,30 @@
     align-items: center;
     position: flex;
     flex-direction: column;
-    margin: 0 5px;
-  }
-
-  .filedContainer {
-    display: flex;
-    flex-direction: column;
-    width: 80%;
-    /* height: 20%; */
   }
 
   .formContainer {
-    display: flex;
-    flex-direction: column;
-    row-gap: 10px;
+    display: block;
     width: 80%;
-    height: 50%;
-    /* position: relative; */
-    top: -45%;
-    left: 10%;
+    height: 60%;
+    position: relative;
+    top: -65%;
+    left: 50px;
     margin: 0 auto;
   }
 
-  .formInputContainer {
-    display: flex;
-    flex-direction: column;
-  }
-
-  .input {
-    width: 100%;
-    bottom: 1rem;
-  }
   .slide {
     position: relative;
     width: 50%;
-    height: 50%;
+    height: 100%;
     background-color: white;
     border-radius: 15px;
   }
 
   .slideCloseBtn {
-    position: absolute;
-    top: 2px;
-    left: 70%;
+    position: relative;
+    top: 10px;
+    left: 20%;
     width: 15px;
     padding: initial;
     height: 15px;
@@ -391,16 +340,16 @@
     border-radius: 10px;
   }
 
-  /* .align {
+  .align {
     position: relative;
-    left: -35%;
+    left: -37%;
     top: 50%;
     width: 90%;
     height: 5vh;
     font-weight: 600;
     color: black;
     font-size: 1rem;
-  } */
+  }
 
   .slideBtn {
     width: 100%;
@@ -409,10 +358,11 @@
     border-radius: 15px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   }
-
   .alignHeading {
     position: relative;
-    left: 6%;
+    left: -40%;
+    top: 50%;
+    width: 90%;
     height: 5vh;
     font-weight: 600;
     color: black;
@@ -420,69 +370,83 @@
   }
 
   .alignCategory {
-    height: 4vh;
+    position: relative;
+    left: -38%;
+    top: 50%;
+    width: 90%;
+    height: 5vh;
+    width: 70%;
     font-weight: 600;
     color: black;
     font-size: 1rem;
-    left: 6%;
   }
 
   .alignDescription {
+    width: 70%;
     font-weight: 600;
     color: black;
     font-size: 1rem;
-    height: 6vh;
-    left: 5%;
+    position: relative;
+    left: -45%;
+    top: 50%;
+    width: 250px;
+    height: 8vh;
   }
 
   .alignImage {
+    position: relative;
+    left: -32%;
+    top: 50%;
+    width: 90%;
     height: 6vh;
     font-weight: 600;
     color: black;
     font-size: 1rem;
-    left: 5%;
   }
 
   .previousBtn {
-    display: none;
+    /* border: 1px solid red; */
+    background-color: #7eff73;
+    color: white;
+    border: none;
+    width: 80%;
+    height: 40px;
+    border-radius: 25px;
+    position: absolute;
+    left: 20px;
+    font-size: large;
   }
 
   .nextBtn {
-    display: none;
-  }
-
-  /* .nextBtn {
     background-color: #73abff;
     color: white;
     border: none;
-    width: 60%;
+    width: 80%;
     height: 40px;
     border-radius: 25px;
     position: relative;
-    left: 45px;
+    left: 20px;
     font-size: large;
-    cursor: pointer;
-  } */
+  }
 
   .postBtn {
     background-color: #ff7373;
     color: white;
     border: none;
-    width: 60%;
+    width: 80%;
     height: 40px;
     border-radius: 25px;
     position: relative;
-    margin-left: 45px;
+    margin-left: 20px;
     font-size: large;
-    margin-bottom: 10px;
-    cursor: pointer;
   }
 
   .btnContainer {
+    /* border: 1px solid red; */
     width: 50%;
     height: 20%;
     position: absolute;
-    top: 80%;
+    top: 70%;
     margin: 0 auto;
     margin-left: 15%;
     display: flex;
