--- a/src/Components/storiesmodal/addStoriesModal.module.css
+++ b/src/Components/storiesmodal/addStoriesModal.module.css
@@ -5,7 +5,7 @@
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.6);
-  z-index: 3;
+  z-index: 9;
 }
 
 .addStoriesContainer {
@@ -13,8 +13,8 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 50%;
-  height: 60vh;
+  width: 60%;
+  height: 80vh;
   border-radius: 12px;
   background-color: #ffffff;
   z-index: 3;
@@ -25,14 +25,14 @@
   color: grey;
   position: relative;
   left: 70%;
-  top: 20px;
+  top: 2px;
 }
 .closeBtn {
   position: relative;
   left: 93%;
   top: 10px;
-  width: 20px;
-  height: 20px;
+  width: 30px;
+  height: 30px;
   text-align: center;
   padding: initial;
   cursor: pointer;
@@ -40,15 +40,20 @@
   border: none;
   font-size: large;
   color: red;
-  border-radius: 10px;
+  border-radius: 50%;
+  padding: 5px;
+}
+
+.addStoriesStyle.closeBtn .faX {
+  vertical-align: middle;
 }
 
 .slideContainer {
   width: 90%;
-  height: 7vh;
+  height: 6vh;
   position: relative;
   left: 5%;
-  top: 30px;
+  top: 20px;
   display: flex;
   gap: 10px;
   justify-content: center;
@@ -57,7 +62,7 @@
 
 .slide {
   position: relative;
-  width: 20%;
+  width: 15%;
   height: 100%;
   background-color: white;
   border-radius: 15px;
@@ -78,8 +83,8 @@
 
 .slideCloseBtn {
   position: relative;
-  top: -10px;
-  left: 20%;
+  top: 0px;
+  left: 15%;
   width: 15px;
   padding: initial;
   height: 15px;
@@ -104,31 +109,35 @@
 }
 
 .formContainer {
-  display: block;
+  display: flex;
+  flex-direction: column;
   width: 80%;
-  height: 60%;
+  height: 55%;
   position: relative;
   top: 35px;
-  left: -10px;
+  /* left: -10px; */
   margin: 0 auto;
 }
 
 .filedContainer {
   display: flex;
-  gap: 50px;
+  flex-direction: row;
+  /* gap: 50px; */
   width: 100%;
   height: 20%;
   margin-top: 10px;
 }
 
 .input {
+  margin-top: 5px;
   border: 1px solid black;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  width: 100%;
 }
 .align {
-  position: relative;
+  /* position: relative;
   left: 5%;
-  width: 70%;
+  width: 70%; */
   font-weight: 600;
   color: black;
   font-size: 1rem;
@@ -137,7 +146,7 @@
 .alignHeading {
   position: relative;
   left: 8%;
-  width: 70%;
+  width: 80%;
   font-weight: 600;
   color: black;
   font-size: 1rem;
@@ -145,29 +154,30 @@
 
 .alignCategory {
   position: relative;
-  left: 4%;
-  width: 70%;
+  left: 7%;
+  width: 81%;
   font-weight: 600;
   color: black;
   font-size: 1rem;
 }
 
 .alignDescription {
-  width: 70%;
+  width: 80%;
+  left: 3.4%;
   font-weight: 600;
   color: black;
   font-size: 1rem;
   position: relative;
-  left: 1.5%;
+  /* left: 1.5%; */
 }
 
 .alignImage {
   position: relative;
-  left: 7%;
-  width: 70%;
+  left: 11.5%;
   font-weight: 600;
   color: black;
   font-size: 1rem;
+  width: 80%;
 }
 
 /* Button */
@@ -194,6 +204,7 @@
   position: relative;
   left: 20px;
   font-size: large;
+  cursor: pointer;
 }
 
 .nextBtn {
@@ -206,6 +217,7 @@
   position: relative;
   left: 20px;
   font-size: large;
+  cursor: pointer;
 }
 
 .postBtn {
@@ -218,9 +230,10 @@
   position: relative;
   margin-left: 40%;
   font-size: large;
+  cursor: pointer;
 }
 
-@media only screen and (max-width: 1250px) {
+/* @media only screen and (max-width: 1250px) {
   .alignHeading {
     position: relative;
     left: 9%;
@@ -233,7 +246,7 @@
   .alignCategory {
     position: relative;
     left: 4%;
-    width: 70%;
+    width: 71%;
     font-weight: 600;
     color: black;
     font-size: 1rem;
@@ -243,9 +256,15 @@
     width: 70%;
     font-weight: 600;
     color: black;
-    font-size: 1rem;
+    font-size: small;
     position: relative;
-    left: 1px;
+    left: 2px;
+    resize: none;
+  }
+
+  .alignDescription::placeholder {
+    padding-top: 10px;
+    font-size: 1rem;
   }
 
   .alignImage {
@@ -256,31 +275,44 @@
     color: black;
     font-size: 1rem;
   }
-}
+} */
 
 @media only screen and (max-width: 650px) {
   .addStoriesContainer {
-    width: 100%;
-    height: 100%;
+    width: 80%;
+    height: 80%;
     border-radius: 12px;
     background-color: #ffffff;
     z-index: 3;
   }
 
+  .addBtn {
+    height: 30%;
+    width: 50%;
+    margin: 0 auto;
+    cursor: pointer;
+  }
+
   .closeBtn {
     position: relative;
     left: 80%;
-    top: 10px;
-    width: 20px;
-    height: 20px;
+    top: 15px;
+    width: 30px;
+    height: 30px;
     text-align: center;
     padding: initial;
     cursor: pointer;
     border-radius: 2px;
-    border: none;
+    border: 3px solid red;
     font-size: large;
     color: red;
-    border-radius: 10px;
+    border-radius: 50%;
+    background: #ffffff;
+    padding: 5px;
+  }
+
+  .addStoriesStyle.closeBtn .faX {
+    vertical-align: middle;
   }
 
   .info {
@@ -291,10 +323,10 @@
   }
 
   .slideContainer {
-    width: 20%;
-    height: 80vh;
+    width: 30%;
+    height: 40%;
     position: relative;
-    left: -20px;
+    left: -25px;
     top: 30px;
     display: flex;
     gap: 10px;
@@ -302,30 +334,49 @@
     align-items: center;
     position: flex;
     flex-direction: column;
+    margin: 0 5px;
+  }
+
+  .filedContainer {
+    display: flex;
+    flex-direction: column;
+    width: 80%;
+    /* height: 20%; */
   }
 
   .formContainer {
-    display: block;
+    display: flex;
+    flex-direction: column;
+    row-gap: 10px;
     width: 80%;
-    height: 60%;
-    position: relative;
-    top: -65%;
-    left: 50px;
+    height: 50%;
+    /* position: relative; */
+    top: -45%;
+    left: 10%;
     margin: 0 auto;
   }
 
+  .formInputContainer {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .input {
+    width: 100%;
+    bottom: 1rem;
+  }
   .slide {
     position: relative;
     width: 50%;
-    height: 100%;
+    height: 50%;
     background-color: white;
     border-radius: 15px;
   }
 
   .slideCloseBtn {
-    position: relative;
-    top: 10px;
-    left: 20%;
+    position: absolute;
+    top: 2px;
+    left: 70%;
     width: 15px;
     padding: initial;
     height: 15px;
@@ -340,16 +391,16 @@
     border-radius: 10px;
   }
 
-  .align {
+  /* .align {
     position: relative;
-    left: -37%;
+    left: -35%;
     top: 50%;
     width: 90%;
     height: 5vh;
     font-weight: 600;
     color: black;
     font-size: 1rem;
-  }
+  } */
 
   .slideBtn {
     width: 100%;
@@ -358,11 +409,10 @@
     border-radius: 15px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   }
+
   .alignHeading {
     position: relative;
-    left: -40%;
-    top: 50%;
-    width: 90%;
+    left: 6%;
     height: 5vh;
     font-weight: 600;
     color: black;
@@ -370,83 +420,69 @@
   }
 
   .alignCategory {
-    position: relative;
-    left: -38%;
-    top: 50%;
-    width: 90%;
-    height: 5vh;
-    width: 70%;
+    height: 4vh;
     font-weight: 600;
     color: black;
     font-size: 1rem;
+    left: 6%;
   }
 
   .alignDescription {
-    width: 70%;
     font-weight: 600;
     color: black;
     font-size: 1rem;
-    position: relative;
-    left: -45%;
-    top: 50%;
-    width: 250px;
-    height: 8vh;
+    height: 6vh;
+    left: 5%;
   }
 
   .alignImage {
-    position: relative;
-    left: -32%;
-    top: 50%;
-    width: 90%;
     height: 6vh;
     font-weight: 600;
     color: black;
     font-size: 1rem;
+    left: 5%;
   }
 
   .previousBtn {
-    /* border: 1px solid red; */
-    background-color: #7eff73;
-    color: white;
-    border: none;
-    width: 80%;
-    height: 40px;
-    border-radius: 25px;
-    position: absolute;
-    left: 20px;
-    font-size: large;
+    display: none;
   }
 
   .nextBtn {
-    background-color: #73abff;
+    display: none;
+  }
+
+  .nextBtn {
+    /* background-color: #73abff;
     color: white;
     border: none;
-    width: 80%;
+    width: 60%;
     height: 40px;
     border-radius: 25px;
     position: relative;
-    left: 20px;
+    left: 45px;
     font-size: large;
+    cursor: pointer; */
   }
 
   .postBtn {
     background-color: #ff7373;
     color: white;
     border: none;
-    width: 80%;
+    width: 60%;
     height: 40px;
     border-radius: 25px;
     position: relative;
-    margin-left: 20px;
+    margin-left: 45px;
     font-size: large;
+    margin-bottom: 10px;
+    cursor: pointer;
   }
 
   .btnContainer {
-    /* border: 1px solid red; */
     width: 50%;
     height: 20%;
     position: absolute;
-    top: 70%;
+    top: 80%;
     margin: 0 auto;
     margin-left: 15%;
     display: flex;
