--- a/src/Components/storiesmodal/addStoriesModal.module.css
+++ b/src/Components/storiesmodal/addStoriesModal.module.css
@@ -49,32 +49,30 @@
 }
 
 .slideContainer {
-  width: 90%;
+  left: 10px;
+  width: 100%;
   height: 6vh;
   position: relative;
-  left: 5%;
   top: 20px;
   display: flex;
-  gap: 10px;
   justify-content: center;
   align-items: center;
 }
 
 .slide {
-  position: relative;
-  width: 15%;
   height: 100%;
   background-color: white;
   border-radius: 15px;
 }
 
 .slideBtn {
-  width: 100%;
+  width: 100px;
   height: 100%;
   background-color: white;
   border-radius: 15px;
   border: none;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  font-weight: 600;
 }
 
 .btnBorder {
@@ -83,13 +81,12 @@
 
 .slideCloseBtn {
   position: relative;
-  top: 0px;
-  left: 15%;
+  top: 1px;
+  right: 20px;
   width: 15px;
   padding: initial;
   height: 15px;
   text-align: center;
-  padding: initial;
   cursor: pointer;
   border-radius: 2px;
   border: none;
@@ -97,7 +94,6 @@
   color: red;
   border: 1px solid red;
   border-radius: 10px;
-  cursor: pointer;
 }
 
 .addBtn {
@@ -116,81 +112,61 @@
   height: 55%;
   position: relative;
   top: 35px;
-  /* left: -10px; */
   margin: 0 auto;
 }
 
 .filedContainer {
   display: flex;
   flex-direction: row;
-  /* gap: 50px; */
-  width: 100%;
+  width: 90%;
   height: 20%;
   margin-top: 10px;
+  gap: 50px;
 }
 
-/* .input {
+.input {
   margin-top: 5px;
   border: 1px solid black;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  width: 100%;
-} */
-
-.align {
-  /* position: relative;
-  left: 5%;
-  width: 70%; */
-  font-weight: 600;
-  color: black;
-  font-size: 1rem;
+  width: 75%;
 }
 
 .alignHeading {
-  position: relative;
-  left: 8.1%;
-  width: 80%;
   font-weight: 600;
   color: black;
   font-size: 1rem;
 }
 
 .alignCategory {
-  position: relative;
-  left: 6.6%;
-  width: 81%;
   font-weight: 600;
   color: black;
   font-size: 1rem;
+  margin-left: -5px;
+  width: 76%;
 }
 
 .alignDescription {
-  width: 80%;
-  left: 4.8%;
   font-weight: 600;
   color: black;
   font-size: 1rem;
-  position: relative;
-  /* left: 1.5%; */
+  margin-left: -26px;
 }
 
 .alignImage {
-  position: relative;
-  left: 10%;
+  margin-left: 20px;
   font-weight: 600;
   color: black;
   font-size: 1rem;
-  width: 80%;
 }
 
 /* Button */
 
 .btnContainer {
-  /* border: 1px solid red; styles*/
   width: 90%;
   height: 50px;
   position: relative;
   top: 10%;
-  left: 5%;
+  /* left: 5%; */
   margin: 0 auto;
   display: flex;
   gap: 1rem;
@@ -329,12 +305,11 @@
     height: 45%;
     position: relative;
     left: -25px;
-    top: 30px;
+    top: 45px;
     display: flex;
-    gap: 10px;
+    gap: 5px;
     justify-content: center;
     align-items: center;
-    position: flex;
     flex-direction: column;
     margin: 0 5px;
   }
@@ -349,28 +324,15 @@
   .formContainer {
     display: flex;
     flex-direction: column;
-    row-gap: 10px;
     width: 80%;
-    height: 50%;
-    /* position: relative; */
+    height: 70%;
     top: -45%;
     left: 10%;
     margin: 0 auto;
   }
 
-  .formInputContainer {
-    display: flex;
-    flex-direction: column;
-  }
-
-  .input {
-    width: 100%;
-    bottom: 1rem;
-  }
   .slide {
     position: relative;
-    width: 50%;
-    height: 50%;
     background-color: white;
     border-radius: 15px;
   }
@@ -414,11 +376,12 @@
 
   .alignHeading {
     position: relative;
-    left: 6%;
-    height: 5vh;
+    height: 6vh;
     font-weight: 600;
     color: black;
     font-size: 1rem;
+    margin-top: -27.5%;
+    width: 100%;
   }
 
   .alignCategory {
@@ -426,7 +389,9 @@
     font-weight: 600;
     color: black;
     font-size: 1rem;
-    left: 6%;
+    margin-top: -28%;
+    margin-left: 1%;
+    width: 102%;
   }
 
   .alignDescription {
@@ -434,7 +399,9 @@
     color: black;
     font-size: 1rem;
     height: 6vh;
-    left: 5%;
+    margin-top: -25%;
+    margin-left: 1%;
+    width: 99%;
   }
 
   .alignImage {
@@ -443,6 +410,9 @@
     color: black;
     font-size: 1rem;
     left: 5%;
+    margin-top: -28%;
+    margin-left: 1%;
+    width: 99%;
   }
 
   .previousBtn {
@@ -453,8 +423,8 @@
     display: none;
   }
 
-  .nextBtn {
-    /* background-color: #73abff;
+  /* .nextBtn {
+     background-color: #73abff;
     color: white;
     border: none;
     width: 60%;
@@ -463,8 +433,8 @@
     position: relative;
     left: 45px;
     font-size: large;
-    cursor: pointer; */
-  }
+    cursor: pointer; 
+  } */
 
   .postBtn {
     background-color: #ff7373;
@@ -474,7 +444,7 @@
     height: 40px;
     border-radius: 25px;
     position: relative;
-    margin-left: 45px;
+    margin-left: 65px;
     font-size: large;
     margin-bottom: 10px;
     cursor: pointer;
