--- a/src/Components/storiesmodal/editStoriesModel.module.css
+++ b/src/Components/storiesmodal/editStoriesModel.module.css
@@ -24,8 +24,9 @@
 .info {
   color: grey;
   position: relative;
-  left: 70%;
-  top: 1px;
+  left: 67%;
+  top: 10px;
+  font-size: small;
 }
 .closeBtn {
   position: relative;
@@ -53,7 +54,7 @@
   width: 100%;
   height: 6vh;
   position: relative;
-  top: 15px;
+  top: 20px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -84,7 +85,7 @@
 .slideCloseBtn {
   position: relative;
   top: 1px;
-  right: 25px;
+  right: -5px;
   width: 15px;
   padding: initial;
   height: 15px;
@@ -105,16 +106,15 @@
   border-radius: 15px;
   border: none;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  cursor: pointer;
 }
 
 .formContainer {
   display: flex;
   flex-direction: column;
   width: 80%;
-  height: 60%;
+  height: 65%;
   position: relative;
-  top: 25px;
+  top: 30px;
   margin: 0 auto;
 }
 
@@ -123,7 +123,7 @@
   flex-direction: row;
   width: 90%;
   height: 24%;
-  margin: 5px;
+  margin-top: 5px;
   gap: 50px;
 }
 
@@ -132,7 +132,7 @@
   border: 1px solid black;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   width: 75%;
-  height: 80%;
+  height: 75%;
 }
 
 .alignHeading {
@@ -152,18 +152,11 @@
 .alignDescription {
   font-weight: 600;
   color: black;
-  font-size: large;
+  font-size: 14px;
   margin-left: -26px;
   resize: none;
   height: 65px;
   overflow-y: hidden;
-  line-height: 0.9rem;
-}
-
-.alignDescription::placeholder {
-  padding-top: 10px;
-  font-size: medium;
-  font-family: sans-serif;
 }
 
 .alignImage {
@@ -180,7 +173,7 @@
   width: 90%;
   height: 50px;
   position: relative;
-  top: 8%;
+  top: 7%;
   /* left: 5%; */
   margin: 0 auto;
   display: flex;
@@ -227,48 +220,48 @@
 }
 
 /* @media only screen and (max-width: 1250px) {
-  .alignHeading {
-    position: relative;
-    left: 9%;
-    width: 70%;
-    font-weight: 600;
-    color: black;
-    font-size: 1rem;
-  }
-
-  .alignCategory {
-    position: relative;
-    left: 4%;
-    width: 71%;
-    font-weight: 600;
-    color: black;
-    font-size: 1rem;
-  }
-
-  .alignDescription {
-    width: 70%;
-    font-weight: 600;
-    color: black;
-    font-size: small;
-    position: relative;
-    left: 2px;
-    resize: none;
-  }
-
-  .alignDescription::placeholder {
-    padding-top: 10px;
-    font-size: 1rem;
-  }
-
-  .alignImage {
-    position: relative;
-    left: 8.5%;
-    width: 70%;
-    font-weight: 600;
-    color: black;
-    font-size: 1rem;
-  }
-} */
+    .alignHeading {
+      position: relative;
+      left: 9%;
+      width: 70%;
+      font-weight: 600;
+      color: black;
+      font-size: 1rem;
+    }
+  
+    .alignCategory {
+      position: relative;
+      left: 4%;
+      width: 71%;
+      font-weight: 600;
+      color: black;
+      font-size: 1rem;
+    }
+  
+    .alignDescription {
+      width: 70%;
+      font-weight: 600;
+      color: black;
+      font-size: small;
+      position: relative;
+      left: 2px;
+      resize: none;
+    }
+  
+    .alignDescription::placeholder {
+      padding-top: 10px;
+      font-size: 1rem;
+    }
+  
+    .alignImage {
+      position: relative;
+      left: 8.5%;
+      width: 70%;
+      font-weight: 600;
+      color: black;
+      font-size: 1rem;
+    }
+  } */
 
 @media only screen and (max-width: 650px) {
   .addStoriesContainer {
@@ -371,15 +364,15 @@
   }
 
   /* .align {
-    position: relative;
-    left: -35%;
-    top: 50%;
-    width: 90%;
-    height: 5vh;
-    font-weight: 600;
-    color: black;
-    font-size: 1rem;
-  } */
+      position: relative;
+      left: -35%;
+      top: 50%;
+      width: 90%;
+      height: 5vh;
+      font-weight: 600;
+      color: black;
+      font-size: 1rem;
+    } */
 
   .slideBtn {
     width: 100%;
@@ -439,17 +432,17 @@
   }
 
   /* .nextBtn {
-     background-color: #73abff;
-    color: white;
-    border: none;
-    width: 60%;
-    height: 40px;
-    border-radius: 25px;
-    position: relative;
-    left: 45px;
-    font-size: large;
-    cursor: pointer; 
-  } */
+       background-color: #73abff;
+      color: white;
+      border: none;
+      width: 60%;
+      height: 40px;
+      border-radius: 25px;
+      position: relative;
+      left: 45px;
+      font-size: large;
+      cursor: pointer; 
+    } */
 
   .postBtn {
     background-color: #ff7373;
